syntax = "proto3";

import "google/protobuf/any.proto";
// import "google/protobuf/empty.proto";
import "base.proto";
import "prefixsid.proto";
import "mpls.proto";

package apis;

message L3VpnRequest {
  // RD identifies the vpn route distinguisher
  google.protobuf.Any rd = 1;
  // Identifies if request sent for ipv4 prefixes in this case this field should
  // be set to true or ipv6, in this case this field should be set to false
  bool ipv4 = 2;
  // Route Targets, optional and additional selection criteria
  repeated google.protobuf.Any rt = 3;
  // Prefix defines a VPN prefix, optional and additional selection criteria
  apis.Prefix vpn_prefix = 4;
}

message SRv6L3Response { repeated apis.SRv6L3Prefix srv6_prefix = 1; }

message MPLSL3Response { repeated apis.MPLSL3Prefix mpls_prefix = 1; }

// GatewayService lists rpc services supported by the gateway api
service GatewayService {
  rpc MPLSL3VPN(L3VpnRequest) returns (MPLSL3Response);
  rpc SRv6L3VPN(L3VpnRequest) returns (SRv6L3Response);
}